--- a/docker/open_ptrack-dep/Dockerfile
+++ b/docker/open_ptrack-dep/Dockerfile
@@ -29,11 +29,11 @@ RUN  add-apt-repository -y ppa:danielrichter2007/grub-customizer     \
     && apt-add-repository -y ppa:graphics-drivers/ppa     \ 
     && add-apt-repository -y ppa:yannubuntu/boot-repair     \ 
     && apt-get update     \ 
-    && apt-get install -y grub-customizer exfat-fuse exfat-utils vim terminator gitg cmake-curses-gui gparted meld cowsay fortune gimp synaptic libgoogle-glog-dev libatlas-base-dev libeigen3-dev libsuitesparse-dev ncdu filezilla p7zip-full openssh-client openssh-server boot-repair   \
+    && apt-get install -y grub-customizer exfat-fuse exfat-utils vim nano curl terminator gitg cmake-curses-gui gparted meld cowsay fortune gimp synaptic libgoogle-glog-dev libatlas-base-dev libeigen3-dev libsuitesparse-dev ncdu filezilla p7zip-full openssh-client openssh-server boot-repair   \
     && ln -s /usr/lib/x86_64-linux-gnu/lapack/liblapack.so.3.7.1 /usr/lib/liblapack.so.3
 
 RUN  sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'     \ 
-    && apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654     \ 
+    && curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -     \ 
     && apt-get update     \ 
     && apt-get install ros-melodic-desktop-full python-rosinstall python-rosdep -y     \ 
     && rosdep init     \ 
