--- a/openpose_wrapper/package.xml
+++ b/openpose_wrapper/package.xml
@@ -10,8 +10,11 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>geometry_msgs</depend>
+  
+  <depend>tf</depend>
   <depend>tf2</depend>
+  <depend>geometry_msgs</depend>
+  <depend>visualization_msgs</depend>
 
   <build_depend>roscpp</build_depend>
   <build_depend>cv_bridge</build_depend>
